--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Scarlett J. Davidson # your name (or website title) here
-logo: "/images/SelfPortrait.jpg?raw=true" # your photo (or logo) here
+logo: "/images/SelfPortrait.JPG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
   <br><br>
