--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Scarlett J. Davidson # your name (or website title) here
 logo: "/images/SelfPortrait.JPG?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  C/C++, Linux Software Engineer
   <br><br>
-  Second description 
+  CODE SAMPLES 
   <br><br>
   <a href="https://www.linkedin.com/in/scarlett-davidson-06893243/">View My LinkedIn Profile</a> 
   
